--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@
     align-items: center;
     max-width: 1240px;
     margin: 45px auto 50px;
+    padding: 0;
 
     @media screen and (max-width: 576px) {
         max-width: 335px;
