--- a/src/components/Arrow/Arrow.scss
+++ b/src/components/Arrow/Arrow.scss
@@ -1,10 +1,12 @@
+@use '../../styles/variables' as *;
+
 .arrow {
     width: 24px;
     height: auto;
     transition: transform 0.5s ease-in-out;
     transform: rotate(180deg);
 
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: $maxwidth) {
         width: 16px;
     }
 
