--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,16 +1,16 @@
+@use '../../styles/variables' as *;
+
 .banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include display_center;
     max-width: 1240px;
     height: 223px;
     margin: 0 auto 43px;
     border-radius: 25px;
     overflow: hidden;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: $textshadow;
     position: relative;
 
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: $maxwidth) {
         height: 111px;
         max-width: 335px;
         margin-bottom: 22px;
@@ -25,14 +25,14 @@
 
     &__text {
         position: absolute;
-        font-family: "Montserrat", sans-serif;
+        font-family: $fontkasa;
         font-size: 48px;
         font-weight: 700;
         text-align: center;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        text-shadow: $textshadow;
         color: #fff;
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             font-size: 24px;
             max-width: 225px;
             text-align: left;
