--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,3 +1,5 @@
+@use '../../styles/variables' as *;
+
 .card {
     max-width: 340px;
     height: 340px;
@@ -6,7 +8,7 @@
     overflow: hidden;
 
 
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: $maxwidth) {
         width: 335px;
         height: 255px;
     }
@@ -23,9 +25,9 @@
         left: 20px;
         right: 20px;
         bottom: 20px;
-        font-family: "Montserrat", sans-serif;
+        font-family: $fontkasa;
         color: #fff;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        text-shadow: $textshadow;
 
         & h2 {
             font-size: 18px;
