--- a/src/components/CollapseItem/CollapseItem.scss
+++ b/src/components/CollapseItem/CollapseItem.scss
@@ -1,10 +1,12 @@
-.slide__element {
+@use '../../styles/variables' as *;
+
+.collapse__element {
 
     max-height: 74px;
     transition: max-height 0.5s ease-in-out;
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontkasa;
 
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: $maxwidth) {
         max-height: 30px;
     }
 
@@ -12,15 +14,15 @@
         max-height: 194px;
 
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             max-height: 210px;
         }
 
-        & .slide__element--definition {
+        & .collapse__element--definition {
             opacity: 1;
             transform: translateY(0);
 
-            @media screen and (max-width: 576px) {
+            @media screen and (max-width: $maxwidth) {
                 padding-bottom: 0;
                 margin-bottom: 0;
             }
@@ -35,12 +37,13 @@
         padding: 10px 15px;
         height: 54px;
         max-width: 100%;
-        background-color: #FF6060;
+        background-color: $primarycolor;
         color: white;
         position: relative;
+        border-radius: 10px;
         z-index: 2;
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             height: 30px;
             padding: 10px;
         }
@@ -49,7 +52,7 @@
             font-size: 24px;
             font-weight: 700;
 
-            @media screen and (max-width: 576px) {
+            @media screen and (max-width: $maxwidth) {
                 font-size: 13px;
             }
         }
@@ -66,7 +69,7 @@
         overflow: hidden;
         transition: all 0.5s ease-in-out;
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             font-size: 12px;
         }
     }
