--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,23 +1,23 @@
+@use '../../styles/variables' as *;
+
 .footer {
     background-color: black;
     width: 100%;
     height: 209px;
-    display: flex;
+    @include display_center;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding-top: 66px;
     margin: 0;
 
 
     & p {
         color: white;
-        font-family: "Montserrat", sans-serif;
+        font-family: $fontkasa;
         font-size: 24px;
         font-weight: 500;
         margin-top: 45px;
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             font-size: 12px;
             max-width: 134px;
             text-align: center;
