--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+@use '../../styles/variables' as *;
+
 .header {
     display: flex;
     flex-direction: row;
@@ -7,7 +9,7 @@
     margin: 45px auto 50px;
     padding: 0;
 
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: $maxwidth) {
         max-width: 335px;
     }
 }
