--- a/src/components/Page404/Page404.scss
+++ b/src/components/Page404/Page404.scss
@@ -1,30 +1,32 @@
-.collapse {
+@use '../../styles/variables' as *;
+
+.page404 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontkasa;
 
     &__title {
-        color: #FF6060;
+        color: $primarycolor;
         font-size: 288px;
         font-weight: 700;
         margin: 90px 0;
         line-height: 1;
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             font-size: 96px;
             margin-top: 60px;
         }
     }
 
     &__text {
-        color: #FF6060;
+        color: $primarycolor;
         font-size: 36px;
         font-weight: 500;
         margin-bottom: 139px;
         text-align: center;
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             font-size: 18px;
             margin-bottom: 113px;
             max-width: 260px;
@@ -41,7 +43,7 @@
         font-weight: 500;
         margin-bottom: 139px;
 
-        @media screen and (max-width: 576px) {
+        @media screen and (max-width: $maxwidth) {
             font-size: 14px;
             margin-bottom: 113px;
         }
