Création de la page PropertyDetail et Gestion de l'erreur sur l'id

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,7 @@
 $primarycolor: #FF6060;
 $greycolor: #f6f6f6;
+$greystar: #E3E3E3;
+
 $textshadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 $fontkasa: "Montserrat", sans-serif;
