--- a/src/components/CollapseAPropos/CollapseAPropos.scss
+++ b/src/components/CollapseAPropos/CollapseAPropos.scss
@@ -6,12 +6,13 @@
     justify-content: center;
     max-width: 1023px;
     box-sizing: border-box;
-    gap: 30px;
+    gap: 20px;
     margin: 0px auto 38px;
 
 
     @media screen and (max-width: $maxwidth) {
         max-width: 335px;
+        margin-bottom: 19px;
     }
 
 }
