--- a/src/components/FicheDetail/FicheDetail.scss
+++ b/src/components/FicheDetail/FicheDetail.scss
@@ -1,1 +1,73 @@
 @use '../../styles/variables' as *;
+
+.fiche {
+    display: flex;
+    flex-direction: column;
+    font-family: $fontkasa;
+
+    @media screen and (max-width: $maxwidth) {
+        max-width: 335px;
+        margin: 0 auto;
+    }
+
+    &__contenu {
+        max-width: 1240px;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    &__premierePartie {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 24px;
+
+        @media screen and (max-width: $maxwidth) {
+            flex-direction: column;
+        }
+    }
+
+    &__titreEtTags {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        @media screen and (max-width: $maxwidth) {
+            margin-bottom: 16px;
+        }
+    }
+
+    &__hostEtStars {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        @media screen and (max-width: $maxwidth) {
+            flex-direction: row-reverse;
+            align-items: center;
+        }
+    }
+
+    &__title {
+        color: $primarycolor;
+        font-size: 36px;
+        font-weight: 500;
+        margin: 0;
+
+        @media screen and (max-width: $maxwidth) {
+            font-size: 18px;
+        }
+    }
+
+    &__location {
+        font-size: 18px;
+        font-weight: 500;
+        margin-top: 5px;
+        margin-bottom: 20px;
+
+        @media screen and (max-width: $maxwidth) {
+            font-size: 14px;
+        }
+    }
+
+}
