--- a/src/components/GalleryCarrousel/GalleryCarrousel.scss
+++ b/src/components/GalleryCarrousel/GalleryCarrousel.scss
@@ -1,1 +1,75 @@
 @use '../../styles/variables' as *;
+
+.carrousel__gallery {
+
+    width: 100%;
+    max-width: 1240px;
+    height: 415px;
+    margin: 0 auto 30px;
+    border-radius: 25px;
+    position: relative;
+    overflow: hidden;
+
+    @media screen and (max-width: $maxwidth) {
+        max-width: 335px;
+        height: 255px;
+    }
+
+    &--counter {
+        position: absolute;
+        bottom: 25px;
+        left: 50%;
+        font-family: $fontkasa;
+        font-size: 18px;
+        font-weight: 500;
+        color: white;
+
+        @media screen and (max-width: $maxwidth) {
+            display: none;
+        }
+    }
+
+    &--img {
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+        object-fit: cover;
+    }
+
+    &--left {
+        transform: rotate(90deg);
+        height: 47px;
+        position: absolute;
+        bottom: 187px;
+        left: 23px;
+        cursor: pointer;
+
+        @media screen and (max-width: $maxwidth) {
+            height: 20px;
+            left: 6px;
+            bottom: 118px;
+        }
+
+    }
+
+    &--right {
+        transform: rotate(270deg);
+        height: 47px;
+        position: absolute;
+        bottom: 187px;
+        right: 23px;
+        cursor: pointer;
+
+        @media screen and (max-width: $maxwidth) {
+            height: 20px;
+            right: 6px;
+            bottom: 118px;
+        }
+    }
+
+    &--slider {
+        display: flex;
+        transition: transform 0.5s ease-out;
+        height: 100%;
+    }
+}
