Réorganisation de la structure de l'application

--- a/src/pages/Apropos/APropos.scss
+++ b/src/pages/Apropos/APropos.scss
@@ -1,6 +1,6 @@
 @use '../../styles/variables' as *;
 
-.collapse {
+.collapse-aPropos {
     display: flex;
     flex-direction: column;
     justify-content: center;
