--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,6 +1,6 @@
 @use '../../styles/variables' as *;
 
-.collapse__element {
+.collapse {
 
     max-height: 74px;
     transition: max-height 0.5s ease-in-out;
@@ -18,7 +18,7 @@
             max-height: 210px;
         }
 
-        & .collapse__element--definition {
+        & .collapse__definition {
             opacity: 1;
             transform: translateY(0);
 
@@ -30,7 +30,7 @@
         }
     }
 
-    &--title {
+    &__title {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -58,7 +58,7 @@
         }
     }
 
-    &--definition {
+    &__definition {
         padding: 16px 20px 20px;
         color: black;
         font-size: 18px;
