--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,33 @@
+@use "../../styles/variables" as *;
+
 body {
     margin: 0;
+}
+
+.cardContainer {
+
+    margin: 0 auto 50px;
+    max-width: 1240px;
+
+
+    @media screen and (max-width: $maxwidth) {
+        max-width: 335px;
+
+    }
+
+    &__wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 60px;
+        background-color: $greycolor;
+        border-radius: 25px;
+        padding: 56px 50px 43px;
+
+        @media screen and (max-width: $maxwidth) {
+            background-color: none;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 20px;
+            padding: 0;
+        }
+    }
 }
