--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -1,6 +1,6 @@
 @use '../../styles/variables' as *;
 
-.page404 {
+.notFound {
     display: flex;
     flex-direction: column;
     align-items: center;
